--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,16 @@ description = ""
 authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.10"
+python = ">=3.7,<3.10"
 gym = "^0.21.0"
 dm-control = "^0.0.403778684"
 opencv-python = "^4.5.4"
 
 [tool.poetry.dev-dependencies]
 absl-py = "^0.15.0"
-ipython = "^7.29.0"
 ipdb = "^0.13.9"
+ipython = "^7.29.0"
+black = "^21.10b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
