--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.7,<3.10"
-gym = "^0.21.0"
+gym = ">=0.17"
 dm-control = "^0.0.403778684"
 opencv-python = "^4.5.4"
 
